# dykj_models

Phybot_Dog/: CMakeLists.txt  package.xml
Phybot_Dog/config/: joint_names_Phybot_Dog.yaml
Phybot_Dog/launch/: display.launch  gazebo.launch
Phybot_Dog/meshes/: HY1.STL  HY2.STL  HY3.STL  HY4.STL  HZ1.STL  HZ2.STL  HZ3.STL  HZ4.STL  QG.STL  QY1.STL  QY2.STL  QY3.STL  QY4.STL  QZ1.STL  QZ2.STL  QZ3.STL  QZ4.STL
Phybot_Dog/urdf/: Phybot_Dog.csv  Phybot_Dog.urdf
Phybot_Racing_Version/: CMakeLists.txt  package.xml
Phybot_Racing_Version/config/: joint_names_S-HR1011.yaml
Phybot_Racing_Version/launch/: display.launch  gazebo.launch
Phybot_Racing_Version/new_meshes/: left_ankle_pitch.STL  left_hip_pitch.STL  left_shoulder_pitch.STL  left_shoulder_roll.STL  right_ankle_pitch.STL  right_hip_pitch.STL  right_shoulder_pitch.STL  right_shoulder_roll.STL  waist_yaw.STL
Phybot_Racing_Version/urdf/: Phybot_Racing_Version.csv  Phybot_Racing_Version.urdf  Phybot_Racing_Version_Simple_17.urdf
Phybot_Racing_Version/xml/: Phybot_Racing_Version.xml  Phybot_Racing_Version_Simple.xml
phybot_big_v2/: CMakeLists.txt  package.xml
phybot_big_v2/config/: joint_names_dyHR01A3.yaml
phybot_big_v2/launch/: display.launch  gazebo.launch
phybot_big_v2/meshes/: base_link.STL  head_pitch.STL  head_yaw.STL  left_ankle_pitch.STL  left_ankle_roll.STL  left_elbow_pitch.STL  left_elbow_yaw.STL  left_hip_pitch.STL  left_hip_roll.STL  left_hip_yaw.STL  left_knee.STL  left_shoulder_pitch.STL  left_shoulder_roll.STL  left_shoulder_yaw.STL  left_toe.STL  right_ankle_pitch.STL  right_knee.STL  (+13 more)
(+4 files in other folders)
